--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>groupId</groupId>
     <artifactId>ContactBook</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
